# py-raceresult

./: .gitignore  README.md  pyproject.toml
src/raceresult/: __init__.py  api.py  client.py
src/raceresult/endpoints/: __init__.py  agegroups.py  archives.py  backup.py  bibranges.py  certificate_sets.py  certificates.py  certificatesets.py  chat.py  contests.py  customfields.py  data.py  dependencies.py  email_templates.py  entryfees.py  exporters.py  file.py  forwarding.py  general.py  group_times.py  history.py  information.py  kiosks.py  labels.py  lists.py  overwrite_values.py  participants.py  pictures.py  rankings.py  rawdata.py  rawdata_rules.py  registrations.py  results.py  settings.py  simple_api.py  splits.py  statistics.py  synchronization.py  team_scores.py  times.py  (+6 more)
src/raceresult/models/: __init__.py  archives.py  certificate.py  certificate_set.py  email.py  event.py  kiosk.py  label.py  participant.py  payment.py  public.py  registration.py  statistic.py  timing.py  types.py
tests/: __init__.py  manual_output_registration_forms.py  manual_test_live.py  test_models.py
