[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raceresult"
version = "0.1.0"
description = "Python API client for Raceresult"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Valerius" }
]
keywords = ["raceresult", "api", "timing", "race", "sports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "eval_type_backport>=0.1.3;python_version<'3.10'",
    "pytest>=8.4.2",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/valerius/py-raceresult"
Repository = "https://github.com/valerius/py-raceresult"

[tool.hatch.build.targets.wheel]
packages = ["src/raceresult"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
